# codex

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: export-image.spec.ts  image-pressure.spec.ts
apps/desktop/src/: main.tsx  test-setup.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: app_state.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: app.rs  bank.rs  chapters.rs  export_questions.rs  files.rs  import_questions.rs  mod.rs  result.rs  subjects.rs  tasks.rs
apps/desktop/src-tauri/src/domain/: chapter.rs  mod.rs  question.rs  subject.rs  task.rs
apps/desktop/src-tauri/src/export/: mod.rs
apps/desktop/src-tauri/src/generation/: mod.rs
apps/desktop/src-tauri/src/import/: mod.rs
apps/desktop/src-tauri/src/migration/: mod.rs
apps/desktop/src-tauri/src/storage/: database.rs  migrations.rs
apps/desktop/src-tauri/tests/: api_boundary.rs  storage_core.rs  tauri_state.rs
apps/desktop/src/app/: App.test.tsx  App.tsx  WorkbenchPage.tsx  router.ts  store.ts
apps/desktop/src/features/bank/: BankPage.test.tsx  BankPage.tsx  bankSelection.test.ts  bankSelection.ts  useBankImportExport.test.tsx  useBankImportExport.ts
apps/desktop/src/features/dashboard/: DashboardPage.test.tsx  DashboardPage.tsx
docs/: release.md
docs/superpowers/plans/: 2026-06-01-project-optimization-pass.md
(+83 files in other folders)
