[package]
name = "yiyan_daily_question_generator"
version = "0.1.0"
description = "毅研每日一题生成器"
authors = ["Yiyan"]
edition = "2021"

[lib]
name = "yiyan_daily_question_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2"
zip = "2"
